apps/base/hume-collector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hume-collector
  labels:
    # admits this namespace through vault-gateway's ingress policy
    vault-access: "true"
