apps/base/hume-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hume-collector
  namespace: hume-collector
spec:
  selector:
    app: hume-collector
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
